# festof2023

./: .gitignore  pyproject.toml  readme.md
src/: main.py
src/agents/: __init__.py
src/agents/temperature/: temperature_agent.py
src/messages/: __init__.py  general.py  request.py  warn.py
src/utils/: cooldown.py  database.py  email.py  requests.py
